click current track to go to containing directory

--- a/cmd/aurelius/html/main.html
+++ b/cmd/aurelius/html/main.html
@@ -17,7 +17,7 @@
 			<div id="status-left">aurelius</div>
 			<div id="status-right-spacer">
 				<div id="status-right-container">
-					<div id="status-right"></div>
+					<div id="status-right" class="clickable"></div>
 				</div>
 			</div>
 			<div id="favorite-button" class="clickable">
