html/ -> static/html/; static/*.png -> static/img/*.png

--- a/cmd/aurelius/static/html/main.html
+++ b/cmd/aurelius/static/html/main.html
@@ -4,7 +4,7 @@
 	<title>aurelius</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="icon" type="image/png" href="/static/icon.png">
+	<link rel="icon" type="image/png" href="/static/img/icon.png">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="/static/css/main.css" rel="stylesheet">
@@ -57,7 +57,7 @@
 	<div id="content"></div>
 
 	<div id="footer">
-		<img src="/static/aurelius.png">
+		<img src="/static/img/aurelius.png">
 	</div>
 </body>
 </html>
