remove type="module" from main.js

--- a/cmd/aurelius/static/html/main.html
+++ b/cmd/aurelius/static/html/main.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="/static/css/main.css" rel="stylesheet">
 
-	<script src="/static/js/main.js" type="module"></script>
+	<script src="/static/js/main.js"></script>
 </head>
 <body>
 	<header>
