add authorization via passphrase

--- a/cmd/aurelius/static/html/main.html
+++ b/cmd/aurelius/static/html/main.html
@@ -7,12 +7,13 @@
 	<link rel="icon" type="image/png" href="/static/img/aurelius.svg">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="/static/css/base.css" rel="stylesheet">
 	<link href="/static/css/main.css" rel="stylesheet">
 
 	<script src="/static/js/main.js"></script>
 </head>
 <body>
-	<header>
+	<header class="ui">
 		<div id="status">
 			<div id="status-left">aurelius</div>
 			<div id="status-right-spacer">
@@ -62,7 +63,7 @@
 
 	<div id="modal-overlay"></div>
 
-	<div id="settings" class="modal">
+	<div id="settings" class="ui modal dialog">
 		<div class="section-header">Stream Encoding</div>
 		<div class="section-body">
 			<table>
