--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -4,7 +4,7 @@
 	<title>aurelius</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="icon" type="image/png" href="/static/img/aurelius.svg">
+	<link rel="icon" type="image/png" href="/static/img/icon.png">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="/static/css/base.css" rel="stylesheet">
