clean up player CSS

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -24,7 +24,7 @@
 			<div id="favorite-button" class="clickable">
 				<i class="material-icons">favorite_border</i>
 			</div>
-			<div id="unfavorite-button" class="clickable">
+			<div id="unfavorite-button" class="clickable hidden">
 				<i class="material-icons">favorite</i>
 			</div>
 		</div>
@@ -32,7 +32,7 @@
 			<div id="play-button" class="clickable">
 				<i class="material-icons">play_arrow</i>
 			</div>
-			<div id="pause-button" class="clickable">
+			<div id="pause-button" class="clickable hidden">
 				<i class="material-icons">pause</i>
 			</div>
 			<div id="prev-button" class="clickable">
@@ -41,17 +41,13 @@
 			<div id="next-button" class="clickable">
 				<i class="material-icons">skip_next</i>
 			</div>
-			<div id="progress-bar-container">
-				<div id="progress-bar-empty" class="clickable">
-					<div id="progress-bar-fill"></div>
-					<div id="seek-slider-area">
-						<div id="seek-slider" class="clickable"></div>
-					</div>
+			<div id="progress-bar-empty" class="clickable">
+				<div id="progress-bar-fill"></div>
+				<div id="seek-slider-area">
+					<div id="seek-slider" class="clickable"></div>
 				</div>
 			</div>
-			<div>
-				<div id="duration"></div>
-			</div>
+			<div id="duration"></div>
 		</div>
 	</header>
 
