clean up player HTML/CSS

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -15,39 +15,39 @@
 <body>
 	<header class="ui">
 		<div id="status">
-			<div id="status-left">aurelius</div>
-			<div id="status-right-spacer">
-				<div id="status-right-container">
-					<div id="status-right" class="clickable"></div>
+			<span id="plug">aurelius</span>
+			<div id="marquee-spacer">
+				<div id="marquee-container">
+					<div id="marquee" class="clickable"></div>
 				</div>
 			</div>
-			<div id="favorite-button" class="clickable">
+			<span id="favorite-button" class="clickable">
 				<i class="material-icons">favorite_border</i>
-			</div>
-			<div id="unfavorite-button" class="clickable hidden">
+			</span>
+			<span id="unfavorite-button" class="clickable hidden">
 				<i class="material-icons">favorite</i>
-			</div>
+			</span>
 		</div>
 		<div id="controls">
-			<div id="play-button" class="clickable">
+			<span id="play-button" class="clickable">
 				<i class="material-icons">play_arrow</i>
-			</div>
-			<div id="pause-button" class="clickable hidden">
+			</span>
+			<span id="pause-button" class="clickable hidden">
 				<i class="material-icons">pause</i>
-			</div>
-			<div id="prev-button" class="clickable">
+			</span>
+			<span id="prev-button" class="clickable">
 				<i class="material-icons">skip_previous</i>
-			</div>
-			<div id="next-button" class="clickable">
+			</span>
+			<span id="next-button" class="clickable">
 				<i class="material-icons">skip_next</i>
-			</div>
+			</span>
 			<div id="progress-bar-empty" class="clickable">
-				<div id="progress-bar-fill"></div>
-				<div id="seek-slider-area">
-					<div id="seek-slider" class="clickable"></div>
-				</div>
+				<span id="progress-bar-fill"></span>
+				<span id="seek-slider-area">
+					<span id="seek-slider" class="clickable"></span>
+				</span>
 			</div>
-			<div id="duration"></div>
+			<span id="duration"></span>
 		</div>
 	</header>
 
