add "auto" ReplayGain: Track when random, Album otherwise

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -92,11 +92,7 @@
 			<table>
 				<tr>
 					<td>Mode</td>
-					<td>
-						<select id="replay-gain">
-							<option>auto</option>
-						</select>
-					</td>
+					<td><select id="replay-gain"></select></td>
 				</tr>
 				<tr id="prevent-clipping-row">
 					<td>Prevent clipping</td>
