make track title <a> so that it can be opened in a new tab

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -16,7 +16,7 @@
 	<nav id="play-controls" class="ui">
 		<div id="marquee-spacer">
 			<div id="marquee-container">
-				<div id="marquee" class="clickable" title="Jump to directory containing this track"></div>
+				<a id="marquee" title="Jump to directory containing this track"></a>
 			</div>
 		</div>
 		<div class="control-group">
