--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -47,7 +47,7 @@
 				<i class="material-icons">favorite</i>
 			</span>
 		</div>
-		<span id="plug">aurelius</span>
+		<span id="about-button" class="clickable">aurelius</span>
 		<span id="duration"></span>
 	</nav>
 
@@ -59,7 +59,7 @@
 
 	<div id="modal-overlay"></div>
 
-	<div id="settings" class="ui modal dialog">
+	<div id="settings-dialog" class="ui modal dialog">
 		<div class="section-header">Stream Encoding</div>
 		<div class="section-body">
 			<table>
@@ -105,6 +105,25 @@
 		</div>
 
 		<button id="save" type="button">Save</button>
+	</div>
+
+	<div id="about-dialog" class="ui modal dialog">
+		<div class="section-header">About</div>
+		<div class="section-body">
+			<p>
+				Aurelius is © Philip Lafleur.
+				<br>Licensed under the Apache License Version 2.0.
+				<br><a href="https://github.com/beakbeak/aurelius">https://github.com/beakbeak/aurelius</a>
+			</p>
+		</div>
+		<div class="section-header">Attributions</div>
+		<div class="section-body">
+			<p>
+				Background image by Steve Schoger.
+				<br>Licensed under Creative Commons <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>.
+				<br><a href="https://www.heropatterns.com/">https://www.heropatterns.com/</a>
+			</p>
+		</div>
 	</div>
 </body>
 </html>
