--- a/cmd/aurelius/assets/html/login.html
+++ b/cmd/aurelius/assets/html/login.html
@@ -13,20 +13,18 @@
 	<script src="/static/js/login.js"></script>
 </head>
 <body>
-	<main>
-		<form id="form" class="ui dialog" action="/login" method="POST">
-			<ul>
-				<li>
-					<label for="passphrase">
-						<i class="material-icons">lock</i>
-					</label>
-					<input type="password" id="passphrase" name="passphrase" placeholder="Password">
-				</li>
-			</ul>
-			<p class="error">
+	<main id="content" class="modal">
+		<form id="login-form" class="ui dialog" action="/login" method="POST">
+			<div class="ui__entry-group">
+				<label class="ui__entry-label">
+					<i class="material-icons">lock</i>
+					<input id="password-input" class="ui__entry-input" type="password" name="passphrase" placeholder="Password">
+				</label>
+			</div>
+			<p id="login-error" class="ui__error hidden">
 				Login failed.
 			</p>
-			<button type="submit">Login</button>
+			<button class="ui__button" type="submit">Login</button>
 		</form>
 	</main>
 </body>
