--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -51,7 +51,7 @@
 		<span id="duration" class="controls__bottom-right"></span>
 	</nav>
 
-	<main id="content"></main>
+	<main class="dir main__dir"></main>
 
 	<aside class="menu top-right__menu">
 		<i id="settings-button" class="menu__button material-icons" title="Settings">
