add more attributions

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -119,11 +119,24 @@
 			</p>
 		</div>
 		<div class="ui__section-header">Attributions</div>
-		<div class="ui__section-body">
+		<div class="ui__section-body ui__section-body--scroll">
 			<p>
 				Background image by Steve Schoger.
 				<br>Licensed under Creative Commons <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>.
 				<br><a href="https://www.heropatterns.com/">https://www.heropatterns.com/</a>
+			</p>
+			<p>
+				<a href="https://commons.wikimedia.org/wiki/File:Roman_-_Portrait_of_the_Emperor_Marcus_Aurelius_-_Walters_23215.jpg">Image of Marcus Aurelius sculpture</a> by Walters Art Museum.
+				<br>Licensed under Creative Commons <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>.
+				<br>Presented here with modifications.
+			</p>
+			<p>
+				Material design icons licensed from Google under the Apache 2.0 license.
+				<br><a href="https://github.com/google/material-design-icons">https://github.com/google/material-design-icons</a>
+			</p>
+			<p>
+				This software uses libraries from the FFmpeg project under the LGPLv2.1.
+				<br><a href="https://ffmpeg.org/">https://ffmpeg.org/</a>
 			</p>
 		</div>
 	</div>
