add repo link to login page

--- a/cmd/aurelius/assets/html/login.html
+++ b/cmd/aurelius/assets/html/login.html
@@ -15,6 +15,7 @@
 	<body>
 		<main id="content" class="modal">
 			<form id="login-form" class="ui dialog" action="/login" method="POST">
+				<a id="plug" href="https://github.com/beakbeak/aurelius">aurelius</a>
 				<div class="ui__entry-group">
 					<label class="ui__entry-label">
 						<i class="material-icons">lock</i>
