Fix password autocomplete on Chrome.

--- a/cmd/aurelius/assets/html/login.html
+++ b/cmd/aurelius/assets/html/login.html
@@ -19,11 +19,19 @@
 					<label class="ui__entry-label">
 						<i class="material-icons">lock</i>
 						<input
+							id="username-input"
+							name="username"
+							value="aurelius"
+							autocomplete="on"
+							style="display: none"
+						/>
+						<input
 							id="password-input"
 							class="ui__entry-input"
 							type="password"
 							name="passphrase"
 							placeholder="Password"
+							autocomplete="on"
 						/>
 					</label>
 				</div>
